# lerobot_CleanK

./: .gitignore  README.md  pyproject.toml
cleank/cleank-1-alpha_follower/: __init__.py  cleank_follower.py  config_cleank_follower.py
cleank/cleank-1-alpha_leader/: cleank_leader.py  config_cleank_leader.py
cleank/damiao/: DM_CAN.py  damiao.py
config/: record_example.yaml  teleop_example.yaml
scripts/: cleank_record.py  cleank_teleoperate.py  lerobot_calibrate.py  lerobot_replay.py
test/: test_cleank_hil.py  test_cleank_registration.py  test_smoke_flows.py
